--- a/src/app/homelist/homelist.component.html
+++ b/src/app/homelist/homelist.component.html
@@ -32,3 +32,4 @@
   <div class="canvasImg">
   </div>
 </div>
+<canvas id="canvas" width="100" height="200" style="border:1px solid #000000;"></canvas>
