--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,1 +1,1 @@
-<canvas id="canvas" width="100" height="200"  style="border:1px solid #000000;"></canvas>
+<canvas id="canvas" width="1060" height="620"></canvas>
