--- a/src/app/homelist/homelist.component.html
+++ b/src/app/homelist/homelist.component.html
@@ -22,6 +22,7 @@
       </p>
     </div>
     <div class="mapImg" (click)="lookMap()">
+      <app-canvas [num]="num"></app-canvas>
       <!-- <Canvas :num="numBox"></Canvas> -->
       <p style="text-align:center;color:#3470cb">点击放大查看并长按保存图片</p>
     </div>
@@ -32,4 +33,3 @@
   <div class="canvasImg">
   </div>
 </div>
-<canvas id="canvas" width="100" height="200" style="border:1px solid #000000;"></canvas>
