监听路由设置标题 显隐nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="footer-nav">
+<div class="footer-nav" *ngIf='isNav'>
   <div class="span" routerLinkActive="active" routerLink="/home">
     <p class="home_nav">
     </p>
